Move the Zeek framework into a separate zkg package.
Note to future self: I originally meant to keep the Zeek package
directly inside the Zeek Agent repository. However, due to the
all our submodules, that meant `zkg` was checking them all out as well,
which is unnecessary and takes a long time.

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,4 +33,7 @@
 	url = https://github.com/nlohmann/json
 [submodule "3rdparty/broker"]
 	path = 3rdparty/broker
-	url = ssh://git@github.com/zeek/broker
+	url = https://github.com/zeek/broker.git
+[submodule "zeek-agent"]
+	path = zeek-agent
+	url = https://github.com/zeek-packages/zeek-agent-v2
