--- a/tests/btest.cfg
+++ b/tests/btest.cfg
@@ -6,12 +6,13 @@ IgnoreDirs  = .tmp
 IgnoreFiles = *.tmp *.swp #* *.trace .DS_Store
 
 [environment]
+PROJECT_ROOT=%(testbase)s/..
 BUILD_DIRECTORY=%(testbase)s/../build
 ZEEKPATH=`%(testbase)s/Scripts/get-zeek-env zeekpath`
 ZEEK_PLUGIN_PATH=`%(testbase)s/Scripts/get-zeek-env zeek_plugin_path`
 ZEEK_SEED_FILE=%(testbase)s/Files/random.seed
 PATH=%(testbase)s/../build/bin:`%(testbase)s/Scripts/get-zeek-env path`
-PACKAGE=%(testbase)s/../zeek/ZeekAgent
+PACKAGE=%(testbase)s/../zeek-agent/scripts
 TZ=UTC
 LC_ALL=C
 TRACES=%(testbase)s/Traces
