--- a/tests/btest.cfg
+++ b/tests/btest.cfg
@@ -11,10 +11,10 @@ BUILD_DIRECTORY=%(testbase)s/../build
 ZEEKPATH=`%(testbase)s/Scripts/get-zeek-env zeekpath`
 ZEEK_PLUGIN_PATH=`%(testbase)s/Scripts/get-zeek-env zeek_plugin_path`
 ZEEK_SEED_FILE=%(testbase)s/Files/random.seed
-PATH=%(testbase)s/../build/bin:`%(testbase)s/Scripts/get-zeek-env path`
+PATH=%(testbase)s/../build/bin:%(default_path)s
 PACKAGE=%(testbase)s/../zeek-agent/scripts
 TZ=UTC
 LC_ALL=C
 TRACES=%(testbase)s/Traces
 TMPDIR=%(testbase)s/.tmp
-TEST_DIFF_CANONIFIER=%(testbase)s/Scripts/diff-remove-timestamps
+TEST_DIFF_CANONIFIER=%(testbase)s/Scripts/canonifier
