--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Prepare
         run: |
           export DEBIAN_FRONTEND=noninteractive
-          sudo apt-get install -y ninja-build ccache curl ca-certificates
+          sudo apt-get install -y ninja-build ccache curl ca-certificates clang-tidy
           sudo pip3 install btest zkg pre-commit
 
       - name: Install Zeek
@@ -138,7 +138,7 @@ jobs:
       - name: Install
         run: |
           ninja -C build install
-          find build/${{runner.temp}}/zeek-agent -exec ls -ald '{}' ';'
+          find ${{runner.temp}}/zeek-agent -exec ls -ald '{}' ';'
 
       - name: Package
         run: |
