Fix clang-tidy warnings.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Prepare
         run: |
           export DEBIAN_FRONTEND=noninteractive
-          sudo apt-get install -y ninja-build ccache curl ca-certificates clang-tidy
+          sudo apt-get install -y ninja-build ccache curl ca-certificates clang-tidy-12
+          sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-12 100
           sudo pip3 install btest zkg pre-commit
 
       - name: Install Zeek
