Add table reference to README.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,14 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 
+- repo: local
+  hooks:
+  - id: autogen-readme
+    name: Update README
+    entry: ./aux/update-readme
+    language: script
+    pass_filenames: false
+
 - repo: https://github.com/pre-commit/mirrors-clang-format
   rev: 'v13.0.0'
   hooks:
