Reorganize files and add tests for current table scripts.

--- a/tests/btest.cfg
+++ b/tests/btest.cfg
@@ -1,5 +1,5 @@
 [btest]
-TestDirs    = zeek-agent
+TestDirs    = agent zeek
 TmpDir      = %(testbase)s/.tmp
 BaselineDir = %(testbase)s/Baseline
 IgnoreDirs  = .tmp
@@ -13,6 +13,7 @@ ZEEK_PLUGIN_PATH=`%(testbase)s/Scripts/get-zeek-env zeek_plugin_path`
 ZEEK_SEED_FILE=%(testbase)s/Files/random.seed
 PATH=%(testbase)s/../build/bin:%(default_path)s
 PACKAGE=%(testbase)s/../zeek-agent/scripts
+FRAMEWORK=%(testbase)s/../zeek-agent/scripts/framework
 TZ=UTC
 LC_ALL=C
 TRACES=%(testbase)s/Traces
