Move `aux/`` to ``auxil/`.
Will avoid Windows naming conflict.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
   hooks:
   - id: autogen-readme
     name: Update README
-    entry: ./aux/update-readme
+    entry: ./auxil/update-readme
     language: script
     pass_filenames: false
 
