Improve handling of more complex WHERE clauses.
With a clause like `WHERE path GLOB "/etc/*" OR path GLOB "/etc/*/*"`,
sqlite's optimizer might do some damage to us by rewriting them into
something supposedly more efficient. For us, that's a problem because
we want to use them for Prefiltering. There are a couple of compiler
defines that sound like them should help, but they don't (see
3rdparty/CMakeLists.txt). So for, we focus on better error messages:

    - Only accept GLOB and equality for mandatory constraints (because
      the other ones some tables might not be able to handle).

    - If no mandatory constraint can be extracted, don't say it's
      "missing", because in the original query it might not.

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -27,6 +27,11 @@ add_library(pathfind::pathfind ALIAS pathfind)
 # sqlite doesn't have a cmake config.
 add_library(sqlite STATIC sqlite/sqlite3.c)
 target_include_directories(sqlite PUBLIC sqlite)
+# TODO: The following should help us receiving the original WHERE constraints
+# instead of the optimizer mangling them, but it doesn't seem to have an effect.
+target_compile_definitions(sqlite PRIVATE SQLITE_OMIT_LIKE_OPTIMIZATION)
+target_compile_definitions(sqlite PRIVATE SQLITE_OMIT_OR_OPTIMIZATION)
+target_compile_definitions(sqlite PRIVATE SQLITE_OMIT_BETWEEN_OPTIMIZATION)
 add_library(sqlite::sqlite ALIAS sqlite)
 
 # adapted from Spicy
