Add support for macOS code signing.

--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -11,6 +11,8 @@ set(CPACK_PACKAGE_VERSION_PATCH "${ZEEK_AGENT_VERSION_PATCH}")
 set(CPACK_SET_DESTDIR no)
 
 if ( HAVE_DARWIN )
+    set (CPACK_PRE_BUILD_SCRIPTS "${CMAKE_CURRENT_SOURCE_DIR}/darwin/codesign.cmake")
+
     set(CPACK_GENERATOR "TGZ;DragNDrop")
     set(CPACK_DMG_DISABLE_APPLICATIONS_SYMLINK yes)
 
