--- a/tests/btest.cfg
+++ b/tests/btest.cfg
@@ -8,6 +8,7 @@ IgnoreFiles = *.tmp *.swp #* *.trace .DS_Store
 [environment]
 PROJECT_ROOT=%(testbase)s/..
 BUILD_DIRECTORY=%(testbase)s/../build
+CONFIG=%(testbase)s/zeek-agent.cfg
 ZEEKPATH=`%(testbase)s/Scripts/get-zeek-env zeekpath`
 ZEEK_PLUGIN_PATH=`%(testbase)s/Scripts/get-zeek-env zeek_plugin_path`
 ZEEK_SEED_FILE=%(testbase)s/Files/random.seed
