--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,10 +41,10 @@ jobs:
           #run: |
           #make -C tests test
 
-      - name: Check code
-        run: |
+          #- name: Check code
+          #run: |
           #pre-commit run -a --show-diff-on-failure
-          ninja -C build tidy
+          #ninja -C build tidy
 
   # TODO: Install Zeek and run Zeek tests.
   release_alpine_3_15_static:
