--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,14 +37,23 @@ jobs:
           ./configure --prefix=/tmp/zeek-agent --enable-debug --enable-sanitizer --enable-ccache --enable-werror --generator=Ninja
           ninja -C build
 
-          #- name: Test
-          #run: |
-          #make -C tests test
+      - name: Test
+        run: |
+          make test
 
-          #- name: Check code
-          #run: |
-          #pre-commit run -a --show-diff-on-failure
-          #ninja -C build tidy
+      - name: Check code
+        run: |
+          pre-commit run -a --show-diff-on-failure
+          # TODO: tidy fails in Broker currently
+          # ninja -C build tidy
+
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: Test output
+          path: |
+            tests/.tmp
+            zeek-agent/tests/.tmp
 
   # TODO: Install Zeek and run Zeek tests.
   release_alpine_3_15_static:
