--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(zeek-agent
 
 if ( HAVE_DARWIN )
     target_sources(zeek-agent PRIVATE platform.posix.cc platform.darwin.cc)
+    target_link_libraries(zeek-agent PRIVATE "EndpointSecurity")
 endif ()
 
 if ( HAVE_LINUX )
