--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CPACK_PACKAGE_VERSION_MINOR "${ZEEK_AGENT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${ZEEK_AGENT_VERSION_PATCH}")
 set(CPACK_SET_DESTDIR no)
 set(CPACK_SOURCE_GENERATOR "TGZ")
-set(CPACK_SOURCE_PACKAGE_FILE_NAME "zeek-agent-${ZEEK_AGENT_VERSION}")
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "zeek-agent-${ZEEK_AGENT_VERSION}-source")
 set(CPACK_SOURCE_IGNORE_FILES "build[^/]*/;\.cache/;\.clangd;\.git;compile_commands.json;tmp/;\.swp$;\.pyc$;")
 
 if ( HAVE_DARWIN )
