Adapt to changes to options in the Zeek package.

--- a/tests/btest.cfg
+++ b/tests/btest.cfg
@@ -6,17 +6,21 @@ IgnoreDirs  = .tmp
 IgnoreFiles = *.tmp *.swp #* *.trace .DS_Store
 
 [environment]
-PROJECT_ROOT=%(testbase)s/..
 BUILD_DIRECTORY=%(testbase)s/../build
 CONFIG=%(testbase)s/zeek-agent.cfg
+FRAMEWORK=%(testbase)s/../zeek-agent/scripts/framework
+LC_ALL=C
+PACKAGE=%(testbase)s/../zeek-agent/scripts
+PATH=%(testbase)s/../build/bin:%(default_path)s
+PROJECT_ROOT=%(testbase)s/..
+TEST_DIFF_CANONIFIER=%(testbase)s/Scripts/canonifier
+TMPDIR=%(testbase)s/.tmp
+TRACES=%(testbase)s/Traces
+TZ=UTC
 ZEEKPATH=`%(testbase)s/Scripts/get-zeek-env zeekpath`
+ZEEK_DEFAULT_CONNECT_RETRY=1
+ZEEK_DEFAULT_LISTEN_ADDRESS=127.0.0.1
+ZEEK_DEFAULT_LISTEN_RETRY=1
+ZEEK_DNS_FAKE=1
 ZEEK_PLUGIN_PATH=`%(testbase)s/Scripts/get-zeek-env zeek_plugin_path`
 ZEEK_SEED_FILE=%(testbase)s/Files/random.seed
-PATH=%(testbase)s/../build/bin:%(default_path)s
-PACKAGE=%(testbase)s/../zeek-agent/scripts
-FRAMEWORK=%(testbase)s/../zeek-agent/scripts/framework
-TZ=UTC
-LC_ALL=C
-TRACES=%(testbase)s/Traces
-TMPDIR=%(testbase)s/.tmp
-TEST_DIFF_CANONIFIER=%(testbase)s/Scripts/canonifier
