--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -249,6 +249,7 @@ jobs:
       - name: Prepare release message
         run: |
           cat CHANGES | awk '/^[0-9]+\./{ n++; next; } n < 2 { print }' >${{ runner.temp }}/release-msg
+          echo "release_name=$(echo ${{ github.ref_name }} | sed 's/^v//')" >> $GITHUB_ENV
 
       - uses: actions/download-artifact@v2
         with:
@@ -262,8 +263,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          draft: true
-          prerelease: true
+          draft: false
+          prerelease: false
+          name: ${{ env.release_name }}
           body_path: ${{ runner.temp }}/release-msg
           files: |
             artifacts/*/*.tar.gz
